# UniqVerse

./: Cargo.toml  LICENSE
contracts/content_manager/: Cargo.toml  lib.rs
contracts/marketplace/: Cargo.toml  lib.rs  psp34.rs
contracts/nft/: Cargo.toml  lib.rs
frontend/: .eslintrc.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/app/: page.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/getSimilarImages/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/app/components/connectButton/: ConnectButton.tsx
frontend/src/app/components/loading/: loading.tsx
frontend/src/app/components/marketplacePreview/: MarketplacePreview.tsx
frontend/src/app/components/publishNft/: publishNft.tsx
frontend/src/app/components/searchResult/: SearchResult.tsx
frontend/src/app/components/ui/: dropdown-menu.tsx  spinner.tsx  tooltip.tsx
frontend/src/app/components/uploadFile/: UploadForm.tsx
frontend/src/app/config/: environment.ts
frontend/src/app/deploy/: deployContract.ts  nft.json  nft.wasm  nft.wasm.base64  nftWasmBase64.json
frontend/src/app/deployments/: deployments.ts
frontend/src/app/design/: page.tsx  testFunction.tsx
frontend/src/app/upload/: page.tsx
frontend/src/app/upload-server/: page.tsx
frontend/src/common/services/: nftFiles.ts  rarity.ts  underDevelopment.ts
frontend/src/components/ui/: button.tsx
frontend/src/components/web3/: connect-button.tsx
frontend/src/utils/: contract-tx-with-toast.tsx
(+16 files in other folders)
